--- a/packages/electron-shell/package.json
+++ b/packages/electron-shell/package.json
@@ -2,6 +2,10 @@
   "name": "electron-shell",
   "main": "main.js",
   "scripts": {
+    "clean": "rm -rf ./build/*",
+    "pre-pack": "node ./pre-pack.js",
+    "pack-win32": "cd ./build && electron-packager ./ lit3d-shell --platform=win32 --arch=x64 --overwrite --out=../../build",
+    "release": "set NODE_ENV=production&& npm run clean && npm run pre-pack && npm run pack-win32 && npm run clean",
     "start": "electron .",
     "dev": "node server.js"
   },
